[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Fed <federicoulfo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
openai = "^0.27.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
